[package]
name = "rs-camera-controls"
version = "0.1.0"
description = "A Tauri App"
authors = ["MGSousa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rs_camera_controls_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.9.1", features = ["tray-icon", "image-png"] }
tauri-plugin-store = "=2.4.1"
tauri-plugin-opener = "=2.5.2"
tauri-plugin-dialog = "=2.4.2"
tauri-plugin-log = "=2.7.1"
tauri-plugin-positioner = { version = "=2.3.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "=2.3.1"
tauri-plugin-updater = "=2.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nokhwa = { version = "=0.10", features = ["input-native"] }
